eks_deployment/api.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app: api
    labels:
      io.kompose.service: currikidev-laravel-api
    name: currikidev-laravel-api
  spec:
    type: ClusterIP
    ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
    selector:
      io.kompose.service: currikidev-laravel-api


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: currikidev-laravel-api
    app: api
  name: currikidev-laravel-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currikidev-laravel-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.k8s.yml -o yamls/
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/currikidev-laravel: "true"
        io.kompose.service: currikidev-laravel-api
    spec:
      containers:
      - image: curriki/laravel_api:test1.0.0
        imagePullPolicy: Always
        name: currikidev-laravel-api
        ports:
        - containerPort: 9000
        volumeMounts:
          - mountPath: /var/www/html/storage
            name: currikidev-laravel-api-storage
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: currikidev-laravel-api-storage
          persistentVolumeClaim:
            claimName: currikidev-laravel-api-storage

---


  # spec:
  #   accessModes:
  #   - ReadWriteMany
  #   capacity:
  #     storage: 5Gi
  #   volumeMode: Filesystem
  #   accessModes:
  #     - ReadWriteMany
  #   persistentVolumeReclaimPolicy: Retain
  #   storageClassName: efs-sc
  #   csi:
  #     driver: efs.csi.aws.com
  #     volumeHandle: fs-5e7be4b3
