eks_deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: curriki-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: curriki
spec:
  hosts:
  - "*"
  gateways:
  - curriki-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: currikidev-laravel-api
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: currikidev-client
